# MLFlow-Switch-Orchestrator

./: README.md  docker-compose.prod.yaml
demo_data/: README.md  prepare_demo_data.py
model-images/pytorch-model-1/: docker-compose.prod.yml  pyproject.toml
model-images/pytorch-model-1/docker_build/: Dockerfile_serve  Dockerfile_training
model-images/pytorch-model-1/src/: helpers.py  train.py
model-images/sklearn-model-1/: docker-compose.prod.yml
model-images/sklearn-model-1/docker_build/: Dockerfile_training
model-images/sklearn-model-1/src/: helpers.py  train.py
router/: Dockerfile  README.md  README.txt  common.py  config.py  main.py  pyproject.toml
router/roll/: api.py  service.py
router/specs/: spec.yaml
router/status/: api.py
router/tests/: conftest.py  test_roll_service.py  test_status_api.py
router/trainer/: service.py
scripts/: smoke-rollback.sh  smoke.sh
tests/smoke/: _smoke_common.py  test_rollback.py  test_train_roll_infer.py
